fix: adjust font size for span element for better readability

--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ h3 {
 }
 
 span {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   transform: translateY(-28px);
   opacity: 0;
   transition: opacity ease 0.5s;
